cli/tests/snapshot/inputs/errors/field_access_under_contract.ncl
# capture = 'stderr'
# command = ['eval']
({} | { name | String }).name
